	(File::PdumpfsForm::get_exe_file_name): Ditto.
	(File::PdumpfsForm::get_program_file_name): Ditto.
	(Pdumpfs::Pdumpfs::start): Don't use Date.today any longer.
	(Pdumpfs::Pdumpfs::latest_snapshot): Take a new parameter: start_time.
	(Pdumpfs::Pdumpfs::make_relative_path): New method.
	(Pdumpfs::Pdumpfs::update_snapshot): Use it.
	(Pdumpfs::Pdumpfs::recursive_copy): Ditto.

	* pdumpfs.in (parse_options): New option: --dry-run (-n).
	(Pdumpfs::Pdumpfs::initialize): New field: @dry_run.
	(Pdumpfs::Pdumpfs::update_file): Simplified.
	(Pdumpfs::Pdumpfs::chown_if_root): New method.
	(Pdumpfs::Pdumpfs::detect_type): Ditto.
	(wprintf): Renamed from eprintf.
	(Pdumpfs::FileMatcher::exclude?): Use wprintf.
	(main): Ditto.
	(Pdumpfs::Pdumpfs::update_snapshot): Modify the exception
	handling. Don't rescue exceptions other than Errno::ENOENT.
	(Pdumpfs::Pdumpfs::recursive_copy): Ditto.

	* Makefile (VERSION): Bumped version number to 1.2.

	* tests/pdumpfs-test: be quiet.

	* pdumpfs.in (parse_options): Fix a bug arised by the yesterday's
	modification. 
	(parse_options): New option: --quiet (-q).
	(Pdumpfs::Pdumpfs::initialize): Remove field @verbose.

2004-08-09  Satoru Takabayashi  <satoru@namazu.org>

	* pdumpfs.in (parse_options): Don't strip the trailing / if
	ARGV[0] == "/". Suggested by Toshikazu Ichikawa <ichikawa at
	toshikazu.org>

2004-08-04  Satoru Takabayashi  <satoru@namazu.org>

	* pdumpfs.in (parse_options): Make the option parser quiet.

2004-08-02  Satoru Takabayashi  <satoru@namazu.org>

	* ChangeLog: Obfuscate email addresses to prevent spams.

2004-07-13  Satoru Takabayashi  <satoru@namazu.org>

	* Makefile (VERSION): Bumped version number to 1.1.

2004-07-09  Satoru Takabayashi  <satoru@namazu.org>

	* pdumpfs.in (File::PdumpfsForm::get_program_directory): New method.
	(File::PdumpfsForm::get_program_file_name): Renamed from program_name.

2004-06-30  Satoru Takabayashi  <satoru@namazu.org>
