@@ -97,10 +97,9 @@ class File
     while true
       dirname, basename = File.split(path)
       break if path == dirname
-      parts.unshift(basename)
+      parts.unshift(basename) unless basename == "."
       path = dirname
     end
-    parts.shift if parts.first == "."
     return parts
   end
 end
@@ -848,6 +847,13 @@ module Pdumpfs
       File.force_symlink(latest_day, latest_symlink)
     end
 
+    def sub_directory? (src, dest)
+      src  = File.expand_path(src)
+      dest = File.expand_path(dest)
+      return (src == dest or
+              /^#{Regexp.quote(src)}#{File::SEPARATOR}/.match(dest))
+    end
+
     def start (src, dest, base = nil)
       start_time = Time.now
 
@@ -855,6 +861,9 @@ module Pdumpfs
       if windows?
         src  = expand_special_folders(src)
         dest = expand_special_folders(dest)
+      end
+      if sub_directory?(src, dest)
+        raise "cannot copy a directory, `#{src}', into itself, `#{dest}'"
       end
 
       latest = latest_snapshot(start_time, src, dest, base)
@@ -1045,13 +1054,8 @@ module Pdumpfs
     end
 
     def make_relative_path (path, base)
-      path_parts = File.split_all(path)
-      base_parts = File.split_all(base)
-      base_parts.each {|base_part|
-        path_part = path_parts.shift
-        raise "#{path}: does not contain #{base}" unless base_part == path_part
-      }
-      File.join(path_parts)
+      pattern = sprintf("^%s%s?", Regexp.quote(base), File::SEPARATOR)
+      path.sub(Regexp.new(pattern), "")
     end
 
     def update_snapshot (src, latest, today)
@@ -1168,7 +1172,8 @@ def parse_options
                      ['--quiet', '-q',     GetoptLong::NO_ARGUMENT],
                      ['--dry-run', '-n',   GetoptLong::NO_ARGUMENT],
                      ['--help', '-h',      GetoptLong::NO_ARGUMENT],
-                     ['--version', '-v',   GetoptLong::NO_ARGUMENT]
+                     ['--version', '-v',   GetoptLong::NO_ARGUMENT],
+                     ['--backtrace',       GetoptLong::NO_ARGUMENT]
                      )
   parser.quiet = true
   parser.each_option do |name, arg|
@@ -1190,6 +1195,8 @@ def parse_options
       be_quiet
     when '--dry-run'
       config[:dry_run] = true
+    when '--backtrace'
+      config[:backtrace] = true
     when '--version'
       version
     end
@@ -1221,7 +1228,7 @@ def main
       pdumpfs.start(src, dest, base)
     rescue => e
       wprintf("%s", e.message)
-      wprintf("%s", e.backtrace.join("\n"))
+      wprintf("%s", e.backtrace.join("\n")) if config[:backtrace]
       exit(1)
     end
   end
